--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,6 +68,7 @@
                 <div class="button-row captcha-btn-row">
                     <button id="btn-captcha-generate">generate</button>
                     <button id="btn-captcha-play" disabled>play</button>
+                    <button id="btn-captcha-save-challenge" class="small" disabled>save wav</button>
                 </div>
             </div>
 
@@ -76,6 +77,7 @@
                 <canvas id="captcha-response-waveform" width="640" height="100"></canvas>
                 <div class="button-row captcha-btn-row">
                     <button id="btn-captcha-record" disabled>record</button>
+                    <button id="btn-captcha-save-response" class="small" disabled>save wav</button>
                 </div>
                 <div id="captcha-status">
                     <span id="captcha-rec-indicator" class="hidden">listening&hellip;</span>
